--- a/index.html
+++ b/index.html
@@ -2,31 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <link type="text/css" rel="stylesheet" href="/styles/style.css">
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="/m1_d06-lab-css_spotify_clone-Lebow-cloud/styles/style.css"
+    />
   </head>
+
   <body>
-  <header class ="backgroundimg">
-    <nav class="navbar">
-        <img class = "spotifylogo" src="/images/spotify-logo.png">  
-        <a href="#home">Premium</a>
-        <a href="#news">Discover</a>
-        <a href="#contact">Help</a>
-        <a href="#contact">Download</a>
-      
-    </nav>
+    <header>
+      <div class="sticky">
+        <img
+          class="logo"
+          src="/m1_d06-lab-css_spotify_clone-Lebow-cloud/images/spotify-logo.png"
+          width="100"
+        />
+        <nav>
+          <ul class="nav_links">
+            <li><a href="#">Premium</a></li>
+            <li><a href="#">Discover</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Dowload</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="coverpage">
+        <h1>Music For Everyone</h1>
+        <h2>
+          Spotify is now free on mobile, tablet and computer. Listen to the
+          right music, wherever you are.
+        </h2>
+      </div>
+    </header>
+  <section id="whatson">
+    <h1>What's on Spotify? </h1>
+    <hr>
+      <div class="rectangle">
+        <div class="squares">
+          <img src="/m1_d06-lab-css_spotify_clone-Lebow-cloud/images/music-icon.png">
+            <h3>Millions of Songs</h3>
+            <p>There ara millions of songs on Spotify</p>
+        </div>
+        <div class="squares">
+          <img src="/m1_d06-lab-css_spotify_clone-Lebow-cloud/images/high-quality-icon.png">
+            <h3>HD Music</h3>
+            <p>Listen to music as if you were lsitening live</p>
+        </div>
+        <div class="squares">
+          <img src="/m1_d06-lab-css_spotify_clone-Lebow-cloud/images/devices-icon.png" >
+            <h3>Stream Everywhere</h3>
+            <p>Stream music on your smartphone, tablet or computer</p>
+        </div>
+      </div>
+  </section>
 
-    
-
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
-
-  </header>
+  </div>
   </body>
 </html>
