--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       type="text/css"
       rel="stylesheet"
-      href="/m1_d06-lab-css_spotify_clone-Lebow-cloud/styles/style.css"
+      href="/styles/style.css"
     />
   </head>
 
@@ -17,8 +17,8 @@
       <div class="sticky">
         <img
           class="logo"
-          src="/m1_d06-lab-css_spotify_clone-Lebow-cloud/images/spotify-logo.png"
-          width="100"
+          src="/images/spotify-logo.png" width="100"
+          
         />
         <nav>
           <ul class="nav_links">
@@ -42,21 +42,32 @@
     <hr>
       <div class="rectangle">
         <div class="squares">
-          <img src="/m1_d06-lab-css_spotify_clone-Lebow-cloud/images/music-icon.png">
+          <img src="/images/music-icon.png">
             <h3>Millions of Songs</h3>
             <p>There ara millions of songs on Spotify</p>
         </div>
         <div class="squares">
-          <img src="/m1_d06-lab-css_spotify_clone-Lebow-cloud/images/high-quality-icon.png">
+          <img src="/images/high-quality-icon.png">
             <h3>HD Music</h3>
             <p>Listen to music as if you were lsitening live</p>
         </div>
         <div class="squares">
-          <img src="/m1_d06-lab-css_spotify_clone-Lebow-cloud/images/devices-icon.png" >
+          <img src="/images/devices-icon.png" >
             <h3>Stream Everywhere</h3>
             <p>Stream music on your smartphone, tablet or computer</p>
         </div>
       </div>
+  </section>
+  <section id = "greenbackground">
+    <div class = "green">
+      <div class = "icon"> 
+      <img src = "/images/spotify-icon-white.png" width="150">
+      </div>
+      <h1>It's as yeezy as Kanye West</h1>
+      
+
+
+    </div>
   </section>
 
   </div>
