--- a/index.html
+++ b/index.html
@@ -58,6 +58,23 @@
         </div>
       </div>
   </section>
+  
+  <section id = "greenbackground">
+   
+    <div class ="kanye-text">
+      <h1>It's as yeezy as Kanue West.</h1>
+  
+       <h2>Search</h2>
+          <p>Know what you want to listen to? Just search and hit play</p>
+        <h2>Browse</h2>
+          <p>Check out the latest charts, brand new releases and great playlist for right now</p>
+        <h2>Discover</h2>
+          <p>Enjoy new music every Monday with your own personal playlist. Or si back and enjot Radio</p>
+    </div>
+    <div class="kanye-img">
+      <img src = "/m1_d06-lab-css_spotify_clone-Lebow-cloud/images/spotify-app.jpg" height="600">
+    </div>
+  </section>
 
   </div>
   </body>
