--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2>Browse</h2>
           <p>Check out the latest charts, brand new releases and great playlist for right now</p>
         <h2>Discover</h2>
-          <p>Enjoy new music every Monday with your own personal playlist. Or si back and enjot Radio</p>
+          <p>Enjoy new Music every Monday with your own personal playlist. Or si back and enjot Radio</p>
     </div>
     <div>
       <img class=white-logo src = "images/spotify-icon-white.png">
